kubernetes/stateful-microservices/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgress-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.1
        name: postgres
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: postgres
          name: postgresdb
      volumes:
      - name: postgresdb  ## this volume name is referenced in the volumeMount
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      

# envFrom defines an environment variable from a ConfigMap resource
# named postgres-config .
# The container requires a volume for persistent storage, defined in the
# volumes field.
# The volume is named postgredb and is backed by a
# PersistentVolumeClaim (PVC) named postgres-pv-claim .
# The volumeMounts field in the container configuration specifies the
# volume and its mount path.
# In this case, the mount path is /var/lib/postgresql/data and the
# subpath is postgres , which means that the PostgreSQL database data
# is stored in the postgres directory of the volume.
