kubernetes/stateful-microservices/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: drexii.me
    http:
      paths:
      - path: /tasks
        pathType: Prefix
        backend:
          service:
            name: stateful-flask-service-externalname
            port:
              number: 5000
  ingressClassName: nginx
